update R, share model

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/q/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/q/index.xhtml
@@ -9,10 +9,11 @@
 		<ui:define name="htmlHead">
 			<script>var dialogSize = { width: 550, height: 620 };</script>
 			<com:scriptfile set="IGNITE" />
+			<com:stylefile path="../share/model.js" />
 			<com:scriptfile path="cmf001.q.vm.js" />
 			<com:scriptfile path="cmf001.q.start.js" />
-			<com:scriptfile path="cmf001.q.service.js" />
 			<com:stylefile path="cmf001.q.style.css" />
+			
 		</ui:define>
 
 		<ui:define name="content">
