--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/002/main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kml/002/main.css
@@ -238,7 +238,7 @@ table.link-notes td {
 .up-down-button {
     float: right;
     width: 30px;
-    margin: -210px -25px 0 0;
+    margin: -210px 0 0 720px;
 }
 
 .down-btn {
