fixbug 88115: fix code

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/c/index.xhtml
@@ -90,10 +90,10 @@
 								</table>
 							</div>
 						</td>
-						<td style="vertical-align: top;">
+						<td style="vertical-align: top; height: 37px">
 							<div class="labelRight" data-bind="ntsFormLabel: {}">#{i18n.getText('CCG013_41')}</div>
 						</td>
-						<td colspan="2" style="vertical-align: top;">
+						<td colspan="2" style="vertical-align: top; ; height: 37px">
 							<div id="file_upload" tabindex="6"
 								data-bind="ntsFileUpload:{
 								filename: filename,
@@ -105,7 +105,7 @@
 					</tr>
 					<tr>
 						<td></td>
-						<td class="col2"><span id="imageName" tabindex="7"
+						<td class="col2"><span id="imageName" class="hyperlink" href="#" tabindex="7"
 							data-bind="text:imageName"></span></td>
 						<td class="pull-right" style="vertical-align: top;">
 							<div>
