--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/a/ccg013.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/a/ccg013.a.style.css
@@ -4,9 +4,9 @@
 	display: table;
 }
 
-#left-content {
-	/* display: table-cell; */
-	
+.fixed-flex-layout-left {
+	width: 340px;
+	height: 328px;
 }
 
 #single-list>tbody>tr>td:first-child {
@@ -16,12 +16,6 @@
 #single-list .icon-dot {
 	vertical-align: middle;
 	font-size: 0px;
-}
-
-.right-content {
-	width: 75%;
-	padding-left: 50px;
-	display: table-cell;
 }
 
 #A_LST_001 {
