--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -79,9 +79,9 @@
 			</div>
 		<div tabindex="6" id="tab-panel" class="cf ccg-tabpanel pull-left"
 			data-bind="ntsTabPanel: { dataSource: tabs, active: selectedTab}">
-			<com:ko tag="if" bind="isQuickSearchTab">
+			<com:ko tag="if" bind="showQuickSearchTab">
 				<div tabindex="-1" class="tab-content-1">
-					<com:ko tag="if" bind="isAllReferableEmployee">
+					<com:ko tag="if" bind="showAllReferableEmployee">
 						<div tabindex="7" class="btn-quick-search" data-bind="click: searchAllListEmployee">
 							<div class="flex valign-center btn_big">
 								<i class="icon icon-28-allemployee"></i>
@@ -90,7 +90,7 @@
 							<span class="controlSettingBg caret-right"></span>
 						</div>
 					</com:ko>
-					<com:ko tag="if" bind="isOnlyMe">
+					<com:ko tag="if" bind="showOnlyMe">
 						<div tabindex="8" class="btn-quick-search" data-bind="click: getEmployeeLogin">
 							<div class="flex valign-center btn_big">
 								<i class="icon icon-26-onlyemployee"></i>
@@ -99,7 +99,7 @@
 							<span class="controlSettingBg caret-right"></span>
 						</div>
 					</com:ko>
-					<com:ko tag="if" bind="isEmployeeOfWorkplace">
+					<com:ko tag="if" bind="showSameWorkplace">
 						<div tabindex="9" class="btn-quick-search" data-bind="click: searchEmployeeOfDepOnly">
 							<div class="flex valign-center btn_small">
 								<i class="icon icon-48-ofworkplace"></i>
@@ -108,7 +108,7 @@
 							<span class="controlSetting caret-right"></span>
 						</div>
 					</com:ko>
-					<com:ko tag="if" bind="isEmployeeWorkplaceFollow">
+					<com:ko tag="if" bind="showSameWorkplaceAndChild">
 						<div tabindex="10" class="btn-quick-search" data-bind="click: searchEmployeeOfDepAndChild">
 							<div class="flex valign-center btn_small">
 								<i class="icon icon-49-workplacechild"></i>
@@ -119,7 +119,7 @@
 					</com:ko>
 				</div>
 			</com:ko>
-			<com:ko tag="if" bind="isAdvancedSearchTab">
+			<com:ko tag="if" bind="showAdvancedSearchTab">
 				<div tabindex="-1" class="tab-content-2 height-maximum">
 						<div id="ccg001-tab-content-2" class="height-maximum">
 							<div class="pull-left height-maximum" style="padding-right: 20px; overflow: overlay;">
@@ -283,7 +283,7 @@
 								</div>
 							</div>
 							
-							<com:ko tag="if" bind="isShowEmployeeList">
+							<com:ko tag="if" bind="showEmployeeSelection">
 								<div class="pull-left height-maximum margin-left-10">
 									<div tabindex="26" id="employeeinfo"></div>
 								</div>
