--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -273,15 +273,15 @@ $('#ccgcomponent').ntsGroupComponent(self.ccgcomponent);]]>
 											<td><b>Type:</b> boolean<br /> Search period format is year/month(true) or year/month/date(false)</td>
 										</tr>
 										<tr>
-											<td>baseDate</td>
+											<td>baseDate<br/><i>(required if showBaseDate = true)</i></td>
 											<td><b>Type:</b> boolean<br /> Search reference date</td>
 										</tr>
 										<tr>
-											<td>periodStartDate</td>
+											<td>periodStartDate<br/><i>(required if showPeriod = true)</i></td>
 											<td><b>Type:</b> boolean<br /> Search start date</td>
 										</tr>
 										<tr>
-											<td>periodEndDate</td>
+											<td>periodEndDate<br/><i>(required if showPeriod = true)</i></td>
 											<td><b>Type:</b> boolean<br /> Search end date</td>
 										</tr>
 										<tr>
