update code cas012

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/c/index.xhtml
@@ -29,6 +29,7 @@
 							optionsValue: 'companyId',
 							value: selectedCompany,
 							optionsText: 'companyName',
+							required : isRequired,
 							columns: [
 								{ prop: 'companyName', length: 14 }
 							]}"></div>
